@@ -1,3 +1,8 @@
+2001-05-14  Adam Fedor  <fedor@gnu.org>
+
+	* Headers/gnustep/base/objc-gnu2next.h: Add error prototypes.
+	* Source/objc-gnu2next.m: Include preface.h, define error funcs.
+
 2001-05-12  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSObject.m: Removed some unused obsolete code.
